--- a/ShareBudget/Base.lproj/Main.storyboard
+++ b/ShareBudget/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="g16-2X-JoY">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="g16-2X-JoY">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -128,18 +128,18 @@
                                         <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pCN-fY-ohL" id="QFX-Mr-kS7">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="oEN-li-ns5">
-                                                    <rect key="frame" x="15" y="11" width="34" height="21"/>
+                                                    <rect key="frame" x="15" y="12" width="33.5" height="20.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wHZ-7b-7bh">
-                                                    <rect key="frame" x="261" y="11" width="44" height="21"/>
+                                                    <rect key="frame" x="261" y="12" width="44" height="20.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -253,7 +253,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eMv-Xz-kKf">
-                                <rect key="frame" x="0.0" y="64" width="320" height="120"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="128"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feb 2017" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ecD-GC-n56">
                                         <rect key="frame" x="8" y="15" width="304" height="20.5"/>
@@ -262,7 +262,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="2EM-g6-aaW">
-                                        <rect key="frame" x="15" y="35.5" width="290" height="75.5"/>
+                                        <rect key="frame" x="15" y="43.5" width="290" height="75.5"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sr7-cf-p0W">
                                                 <rect key="frame" x="0.0" y="0.0" width="90.5" height="75.5"/>
@@ -342,9 +342,6 @@
                                                     </view>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DeO-Ry-c3j">
                                                         <rect key="frame" x="0.0" y="0.0" width="90" height="76"/>
-                                                        <connections>
-                                                            <action selector="showAllExpenses" destination="VqQ-S8-nC0" eventType="touchUpInside" id="6GJ-hP-grR"/>
-                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -414,17 +411,17 @@
                                     <constraint firstItem="ecD-GC-n56" firstAttribute="top" secondItem="eMv-Xz-kKf" secondAttribute="top" constant="15" id="63K-Vb-S3q"/>
                                     <constraint firstAttribute="trailing" secondItem="2EM-g6-aaW" secondAttribute="trailing" constant="15" id="9Hg-UE-sSY"/>
                                     <constraint firstAttribute="trailing" secondItem="ecD-GC-n56" secondAttribute="trailing" constant="8" id="K2o-60-CG3"/>
-                                    <constraint firstAttribute="height" constant="120" id="Tv4-d4-NT7"/>
+                                    <constraint firstAttribute="height" constant="128" id="Tv4-d4-NT7"/>
                                     <constraint firstItem="2EM-g6-aaW" firstAttribute="leading" secondItem="eMv-Xz-kKf" secondAttribute="leading" constant="15" id="feV-HC-4Pk"/>
-                                    <constraint firstItem="2EM-g6-aaW" firstAttribute="top" secondItem="ecD-GC-n56" secondAttribute="bottom" id="jkj-5L-MP9"/>
+                                    <constraint firstItem="2EM-g6-aaW" firstAttribute="top" secondItem="ecD-GC-n56" secondAttribute="bottom" constant="8" id="jkj-5L-MP9"/>
                                     <constraint firstItem="ecD-GC-n56" firstAttribute="leading" secondItem="eMv-Xz-kKf" secondAttribute="leading" constant="8" id="z06-Ig-aui"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cbx-g2-cBC">
-                                <rect key="frame" x="0.0" y="184" width="320" height="335"/>
+                                <rect key="frame" x="0.0" y="192" width="320" height="327"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DdS-tK-XCf">
-                                        <rect key="frame" x="85" y="92.5" width="150" height="150"/>
+                                        <rect key="frame" x="85" y="88.5" width="150" height="150"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BOY-8j-nZQ">
                                                 <rect key="frame" x="24.5" y="31.5" width="100.5" height="88"/>
@@ -457,9 +454,6 @@ new expense</string>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Ql-yP-LX9">
                                                 <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
-                                                <connections>
-                                                    <action selector="createNewExpenseAction" destination="VqQ-S8-nC0" eventType="touchUpInside" id="lQb-2F-axS"/>
-                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" red="0.0" green="0.66666666666666663" blue="0.75726996527777779" alpha="1" colorSpace="calibratedRGB"/>
@@ -495,6 +489,19 @@ new expense</string>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="balanceDescriptionLabel" destination="mLU-h2-aBF" id="KKQ-oy-bhN"/>
+                        <outlet property="balanceLabel" destination="ej5-24-GWN" id="zDV-Tz-T2s"/>
+                        <outlet property="budgetContainerView" destination="sr7-cf-p0W" id="4pD-ts-N1x"/>
+                        <outlet property="budgetDescriptionLabel" destination="XTL-l5-va4" id="qwT-We-Hyu"/>
+                        <outlet property="budgetLabel" destination="PqH-xJ-RhC" id="KBy-Mw-71M"/>
+                        <outlet property="createExpenseButton" destination="1Ql-yP-LX9" id="tRk-K7-hhx"/>
+                        <outlet property="expenseButton" destination="DeO-Ry-c3j" id="Ulw-8W-qGy"/>
+                        <outlet property="expenseContainerView" destination="8jT-ts-d6I" id="eTc-uw-LPG"/>
+                        <outlet property="expenseDescriptionLabel" destination="ITm-C0-BfS" id="jm2-gd-ULT"/>
+                        <outlet property="expenseLabel" destination="Bdi-iG-659" id="rFN-3v-wOn"/>
+                        <outlet property="monthLabel" destination="ecD-GC-n56" id="a00-hY-D9g"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MJd-xf-cTI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -558,11 +565,11 @@ new expense</string>
                                         <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6H7-TL-s0s" id="SK0-qz-U5j">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ofa-40-Usq">
-                                                    <rect key="frame" x="15" y="0.0" width="290" height="43"/>
+                                                    <rect key="frame" x="15" y="0.0" width="290" height="43.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
