--- a/ShareBudget/CreateSearchTableViewHeader.xib
+++ b/ShareBudget/CreateSearchTableViewHeader.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -41,7 +41,6 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="uHc-8u-y4I" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Isj-17-7xp"/>
                 <constraint firstItem="QWO-ZR-aBl" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="QKb-FI-qmI"/>
